# kevinzzx_Cpp

./: CMakeLists.txt  README.md  main.cpp
PathPlanning/: CMakeLists.txt
PathPlanning/A_Star/: astar.cpp  astar.h  main.cpp
PathPlanning/B-spline/: BSpline.cpp  BSpline.h  main.cpp
PathPlanning/Bezier/: BezierCurve.cpp  BezierCurve.h  main.cpp
PathPlanning/Curve_interpolation/: main.cpp
PathPlanning/Dijkstra/: Dijkstra.cpp  Dijkstra.h  main.cpp
PathPlanning/Dubins_path/: Debins_path.cpp  Debins_path.h  main.cpp
PathPlanning/Frenet_opt_traj/: Frenet_opt_traj.cpp  Frenet_opt_traj.h  main.cpp
PathPlanning/dwa/: dwa.cpp  dwa.h  main.cpp
PathPlanning/rrt/: main.cpp  rrt.cpp  rrt.h
PathPlanning/utils/: cubic_spline.cpp  cubic_spline.h  frenet_path.h  kevinzzxcpp_types.h  quartic_polynomial.cpp  quartic_polynomial.h  quintic_polynomial.cpp  quintic_polynomial.h
pathtracking/: CMakeLists.txt
pathtracking/LQR/: LQRcontrol.cpp  LQRcontrol.h  main.cpp
pathtracking/MPC/: MPC.cpp  MPC.h  main.cpp
pathtracking/PID/: main.cpp  pidcontrol.cpp  pidcontrol.h
pathtracking/Pure_Pursuit/: PurePursuit.cpp  PurePursuit.h  main.cpp
pathtracking/Rear_Wheel_Feedback/: main.cpp
pathtracking/Stanley/: Stanley.h  main.cpp
pathtracking/utils/: kinematicModel.cpp  kinematicModel.h  motion_model.cpp  motion_model.h
